# halo

./: Cargo.toml  README.md  SYNTAX.md  init.txt
.github/workflows/: ci.yml  release.yml
examples/: 01_hello.halo  02_conditionals.halo  03_factorial.halo  04_fibonacci.halo  05_operators.halo  06_new_features.halo  bench_fib.halo  comments.halo  demo.halo  even_numbers.halo  factorial.halo  fibonacci.halo  logical_and_modulo.halo  test_func_call.halo  test_return.halo
src/: lexer.rs  lib.rs  main.rs  token.rs
src/compiler/: builder.rs  codegen.rs  mod.rs  types.rs
src/interpreter/: environment.rs  evaluator.rs  mod.rs  value.rs
src/lexer/: lexer.rs  mod.rs  token.rs
src/parser/: ast.rs  mod.rs  parser.rs  visitor.rs
tests/: arithmetic_tests.rs  control_flow_tests.rs  function_tests.rs  interpreter_tests.rs  lexer_tests.rs  parser_tests.rs  scope_and_variable_tests.rs  string_and_types_tests.rs
tests/common/: mod.rs
